<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <SwitchPreferenceCompat
        app:key="hideItems"
        app:summary="@string/all_items_settings_description"
        app:title="@string/display_all_items" />
    <Preference
        app:key="deleteAll"
        app:title="@string/delete_all" />
    <Preference
        app:key="import"
        app:title="@string/import_password" />
    <Preference
        app:key="export"
        app:title="@string/export_password" />
    <fr.jorisfavier.youshallnotpass.ui.common.BlinkPreference
        app:key="desktop"
        app:summary="@string/ysnp_desktop_summary"
        app:title="@string/ysnp_desktop" />
    <SwitchPreferenceCompat
        tools:isPreferenceVisible="true"
        app:isPreferenceVisible="false"
        app:key="autofill"
        app:summary="@string/autofill_explanation"
        app:title="@string/autofill" />
    <ListPreference
        app:key="theme"
        app:defaultValue=""
        app:title="@string/app_theme" />
    <PreferenceCategory app:title="@string/about" />
    <Preference
        app:key="privacyPolicy"
        app:title="@string/privacy_policy" />
    <Preference
        app:key="appVersion"
        app:title="@string/version" />


</PreferenceScreen>