<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="fr.jorisfavier.youshallnotpass.features.item.ItemEditViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.item.ItemActivity">
        <EditText
            android:id="@+id/itemview_name"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_rounded"
            android:backgroundTint="#212121"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:inputType="text"
            android:hint="@string/item_name"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/itemview_name"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:hint="@string/item_password"
            android:background="@drawable/btn_rounded"
            android:inputType="textVisiblePassword"
            android:backgroundTint="#212121"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/itemview_create_button"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:backgroundTint="@color/primaryTextColor"
            android:background="@drawable/btn_rounded"
            android:textColor="#212121"
            android:layout_marginBottom="40dp"
            android:text="@string/item_create"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/itemview_create_button"
            android:backgroundTint="@color/primaryTextColor"
            android:background="@drawable/btn_rounded"
            android:textColor="#212121"
            android:layout_marginBottom="40dp"
            android:text="@string/item_generate_password"
            android:padding="15dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>